--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -852,14 +852,17 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qsc-lN-Hq7">
                                                 <rect key="frame" x="0.0" y="0.0" width="66" height="57.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thv-Oj-Bhn">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thv-Oj-Bhn" userLabel="한식">
                                                         <rect key="frame" x="15.5" y="0.0" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="35" id="Bqb-Wn-MJA"/>
                                                             <constraint firstAttribute="width" secondItem="Thv-Oj-Bhn" secondAttribute="height" multiplier="1:1" id="Xyc-kz-3fu"/>
                                                             <constraint firstAttribute="height" constant="35" id="e7Y-ie-Ui7"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="한식"/>
+                                                        <state key="normal" title="한식" image="한식"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="RdV-an-vgg"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="한식" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxq-xs-a63">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -875,14 +878,17 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Cd7-jH-hAN">
                                                 <rect key="frame" x="79.5" y="0.0" width="66" height="57.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EUr-rB-dDm">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EUr-rB-dDm" userLabel="분식">
                                                         <rect key="frame" x="15.5" y="0.0" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="35" id="gK9-bX-ANc"/>
                                                             <constraint firstAttribute="width" secondItem="EUr-rB-dDm" secondAttribute="height" multiplier="1:1" id="sC2-Z0-jrQ"/>
                                                             <constraint firstAttribute="height" constant="35" id="sUp-Qo-rnb"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="분식"/>
+                                                        <state key="normal" title="분식" image="분식"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="5A0-xI-AIy"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="분식" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rk6-gg-VRS">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -898,14 +904,17 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="R3n-h3-8y9">
                                                 <rect key="frame" x="159" y="0.0" width="66" height="57.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhW-0C-SHs">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhW-0C-SHs" userLabel="커피">
                                                         <rect key="frame" x="15.5" y="0.0" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="35" id="0e3-ns-DUa"/>
                                                             <constraint firstAttribute="width" secondItem="hhW-0C-SHs" secondAttribute="height" multiplier="1:1" id="9gv-Zc-fsS"/>
                                                             <constraint firstAttribute="width" constant="35" id="Evs-S5-FMN"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="커피"/>
+                                                        <state key="normal" title="커피" image="커피"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="848-Ru-AQp"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="커피" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tfe-zU-RaQ">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -928,7 +937,10 @@
                                                             <constraint firstAttribute="width" constant="35" id="Pgl-fb-WXu"/>
                                                             <constraint firstAttribute="width" secondItem="Znp-4J-oJ6" secondAttribute="height" multiplier="1:1" id="kl3-2m-gjD"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="디저트"/>
+                                                        <state key="normal" title="디저트" image="디저트"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="2BP-W4-Zvu"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="디저트" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbV-tP-pSR">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -951,7 +963,10 @@
                                                             <constraint firstAttribute="height" constant="35" id="lY0-t9-xP7"/>
                                                             <constraint firstAttribute="width" constant="35" id="xjr-6m-J64"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="돈까스·일식"/>
+                                                        <state key="normal" title="돈까스·일식" image="돈까스·일식"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="Igm-bC-svg"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="돈까스·일식" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EI1-HN-eKD">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -979,7 +994,10 @@
                                                             <constraint firstAttribute="width" constant="35" id="Hl9-iF-goD"/>
                                                             <constraint firstAttribute="height" constant="35" id="Vui-Fg-Jnx"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="치킨"/>
+                                                        <state key="normal" title="치킨" image="치킨"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="kRQ-4H-k4i"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="치킨" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXe-0N-yJx">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -1002,7 +1020,10 @@
                                                             <constraint firstAttribute="height" constant="35" id="S4J-v0-Vh0"/>
                                                             <constraint firstAttribute="width" constant="35" id="cCf-pu-KbJ"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="피자"/>
+                                                        <state key="normal" title="피자" image="피자"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="MV1-gB-r0M"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="피자" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cd3-dv-pTc">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -1025,7 +1046,10 @@
                                                             <constraint firstAttribute="width" secondItem="eRk-1S-vjS" secondAttribute="height" multiplier="1:1" id="bYy-xf-Kbh"/>
                                                             <constraint firstAttribute="width" constant="35" id="ogz-lC-plU"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="중국집"/>
+                                                        <state key="normal" title="중국집" image="중국집"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="bDr-qp-oqB"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="중국집" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g51-ra-jaV">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -1048,7 +1072,10 @@
                                                             <constraint firstAttribute="width" constant="35" id="K1x-ij-mmI"/>
                                                             <constraint firstAttribute="width" secondItem="ro5-eC-hZD" secondAttribute="height" multiplier="1:1" id="dJk-hM-xpK"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="햄버거"/>
+                                                        <state key="normal" title="햄버거" image="햄버거"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="WhL-2s-z8Z"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="햄버거" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpi-WI-wan">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
@@ -1071,7 +1098,10 @@
                                                             <constraint firstAttribute="width" secondItem="qbA-ve-XHq" secondAttribute="height" multiplier="1:1" id="hKV-El-nQL"/>
                                                             <constraint firstAttribute="height" constant="35" id="oWT-PU-97n"/>
                                                         </constraints>
-                                                        <state key="normal" title="Button" image="기타"/>
+                                                        <state key="normal" title="기타" image="기타"/>
+                                                        <connections>
+                                                            <action selector="filterButtonTapped:" destination="wBu-dl-dbY" eventType="touchUpInside" id="Twy-GH-RQG"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="기타" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M47-fE-3Gl">
                                                         <rect key="frame" x="0.0" y="43" width="66" height="14.5"/>
