--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -747,7 +747,7 @@
             </objects>
             <point key="canvasLocation" x="811.59420289855075" y="-604.01785714285711"/>
         </scene>
-        <!--Main Table View Controller-->
+        <!--창원대학교-->
         <scene sceneID="2WV-gW-y8M">
             <objects>
                 <viewController id="wBu-dl-dbY" customClass="MainTableViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
@@ -766,71 +766,64 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="ZI1-yh-khW">
-                                                    <rect key="frame" x="8" y="8" width="398" height="44"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Sja-EJ-H12">
+                                                    <rect key="frame" x="15" y="10" width="384" height="40.5"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="분식" translatesAutoresizingMaskIntoConstraints="NO" id="GGs-Lw-ssp">
-                                                            <rect key="frame" x="0.0" y="0.0" width="35" height="44"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="GGs-Lw-ssp" secondAttribute="height" multiplier="1:1" id="dTV-5s-ev5"/>
-                                                                <constraint firstAttribute="width" constant="35" id="giC-Lo-KZZ"/>
-                                                                <constraint firstAttribute="height" constant="35" id="tch-cU-vEJ"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Rfj-lz-D77">
-                                                            <rect key="frame" x="38" y="0.0" width="360" height="44"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="hYR-IK-7m1">
+                                                            <rect key="frame" x="0.0" y="2" width="296" height="37"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UwI-A8-coa">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="360" height="22"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="6동 같이시켜먹을사람" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6B0-yD-rW5">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="296" height="18"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="108" translatesAutoresizingMaskIntoConstraints="NO" id="ta2-WB-EwQ">
-                                                                    <rect key="frame" x="0.0" y="22" width="360" height="22"/>
-                                                                    <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROR-KG-l2V">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="230" height="22"/>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                            <nil key="textColor"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oha-uU-487" customClass="CircleProgressViewController" customModule="DormitoryForDelivery" customModuleProvider="target">
-                                                                            <rect key="frame" x="338" y="0.0" width="22" height="22"/>
-                                                                            <subviews>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1/3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISi-Nh-Dmf">
-                                                                                    <rect key="frame" x="5" y="2" width="15" height="12"/>
-                                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                                                                    <nil key="textColor"/>
-                                                                                    <nil key="highlightedColor"/>
-                                                                                </label>
-                                                                            </subviews>
-                                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" secondItem="oha-uU-487" secondAttribute="height" multiplier="1:1" id="Pjv-wJ-N4h"/>
-                                                                            </constraints>
-                                                                        </view>
-                                                                    </subviews>
-                                                                </stackView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="오후 4:30" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFb-lR-QF9">
+                                                                    <rect key="frame" x="0.0" y="21" width="54.5" height="16"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <color key="textColor" red="0.64705884459999996" green="0.78823530669999997" blue="0.9098039269" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="6B0-yD-rW5" secondAttribute="trailing" id="SDD-N4-qwx"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pmT-8a-eLB">
+                                                            <rect key="frame" x="326" y="8.5" width="58" height="24"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="분식" translatesAutoresizingMaskIntoConstraints="NO" id="Nqd-Tk-4gY">
+                                                                    <rect key="frame" x="0.0" y="2" width="20" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="20" id="dZF-l5-5jD"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="w9j-t0-9xB"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/3" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2gZ-Al-w3Y">
+                                                                    <rect key="frame" x="28" y="0.0" width="30" height="24"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="30" id="hS4-WQ-7bj"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ZI1-yh-khW" firstAttribute="leading" secondItem="cmD-Xf-mUq" secondAttribute="leading" constant="8" id="9zV-c3-pHy"/>
-                                                <constraint firstAttribute="trailing" secondItem="ZI1-yh-khW" secondAttribute="trailing" constant="8" id="cf9-lC-lOD"/>
-                                                <constraint firstItem="ZI1-yh-khW" firstAttribute="top" secondItem="cmD-Xf-mUq" secondAttribute="top" constant="8" id="nJ0-Xi-3Vi"/>
-                                                <constraint firstAttribute="bottom" secondItem="ZI1-yh-khW" secondAttribute="bottom" constant="8" id="xKB-rb-JWz"/>
+                                                <constraint firstAttribute="bottom" secondItem="Sja-EJ-H12" secondAttribute="bottom" constant="9.5" id="0Vy-Y3-jfB"/>
+                                                <constraint firstItem="Sja-EJ-H12" firstAttribute="top" secondItem="cmD-Xf-mUq" secondAttribute="top" constant="10" id="Afu-zT-G1R"/>
+                                                <constraint firstAttribute="trailing" secondItem="Sja-EJ-H12" secondAttribute="trailing" constant="15" id="erH-Ts-YgO"/>
+                                                <constraint firstItem="Sja-EJ-H12" firstAttribute="leading" secondItem="cmD-Xf-mUq" secondAttribute="leading" constant="15" id="o2o-Ji-TjV"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="catagoryImage" destination="GGs-Lw-ssp" id="j5l-Zb-dk6"/>
-                                            <outlet property="categoriesLabel" destination="ROR-KG-l2V" id="rhV-Wg-YuQ"/>
-                                            <outlet property="circularProgressBarView" destination="oha-uU-487" id="bz0-x7-noa"/>
-                                            <outlet property="postTitleLabel" destination="UwI-A8-coa" id="rC1-Ea-qOb"/>
-                                            <outlet property="progressLabel" destination="ISi-Nh-Dmf" id="eYs-D7-2RB"/>
+                                            <outlet property="catagoryImage" destination="Nqd-Tk-4gY" id="4N8-NQ-OMD"/>
+                                            <outlet property="postTitleLabel" destination="6B0-yD-rW5" id="XmR-oL-A8K"/>
+                                            <outlet property="progressLabel" destination="2gZ-Al-w3Y" id="DWJ-nG-vZK"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1156,7 +1149,7 @@
                             <constraint firstItem="rUG-R6-rhe" firstAttribute="leading" secondItem="UsP-Vp-r1i" secondAttribute="leading" id="xG1-ge-HGV"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="9A1-AG-Ucf"/>
+                    <navigationItem key="navigationItem" title="창원대학교" id="9A1-AG-Ucf"/>
                     <connections>
                         <outlet property="mainTableView" destination="Vng-IY-FkT" id="5h8-1E-Fix"/>
                         <outlet property="searchBarView" destination="rUG-R6-rhe" id="zFF-VM-WmF"/>
@@ -1900,6 +1893,7 @@
         <image name="기타" width="512" height="512"/>
         <image name="돈까스·일식" width="512" height="512"/>
         <image name="디저트" width="512" height="512"/>
+        <image name="분식" width="512" height="512"/>
         <image name="분식" width="512" height="512"/>
         <image name="중국집" width="512" height="512"/>
         <image name="치킨" width="512" height="512"/>
