만나는시간 구현 / doneButton 상태코드 수정
- timeInterval1970이용해서 만나는시간 서버에서 주고받기

- 모든값들이 수정될때마다 doneButton상태 확인하기

--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -866,6 +866,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="catagoryImage" destination="Nqd-Tk-4gY" id="4N8-NQ-OMD"/>
+                                            <outlet property="meetingTimeLabel" destination="RFb-lR-QF9" id="pPm-62-9nn"/>
                                             <outlet property="postTitleLabel" destination="6B0-yD-rW5" id="XmR-oL-A8K"/>
                                             <outlet property="progressLabel" destination="2gZ-Al-w3Y" id="DWJ-nG-vZK"/>
                                         </connections>
